Add `rel=“prefetch”` support.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -70,7 +70,7 @@ const navigation = {
               {
                 navigation.product.map((item) => (
                   <li>
-                    <a href={item.href} class="text-base">
+                    <a href={item.href} class="text-base" rel="prefetch">
                       {item.name}
                     </a>
                   </li>
