--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,19 +14,22 @@ import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
     <div class="w-2/3 flex justify-end">
       <ul class="flex">
         <li class="mx-4">
-          <a class="font-bold" href="/get-started">Get Started</a>
+          <a class="font-bold" href="/get-started" rel="prefetch">Get Started</a
+          >
         </li>
         <li class="mx-4">
           <a class="font-bold" href={DOCUMENTATION_URL} target="_blank">Docs</a>
         </li>
         <li class="mx-4">
-          <a class="font-bold" href="/blog">Blog</a>
+          <a class="font-bold" href="/blog" rel="prefetch">Blog</a>
         </li>
         <li class="mx-4">
           <a class="font-bold" href={GITHUB_URL} target="_blank">GitHub</a>
         </li>
         <li class="mx-4">
-          <a class="font-bold" href="/support-ddev">❤️ Support DDEV</a>
+          <a class="font-bold" href="/support-ddev" rel="prefetch"
+            >❤️ Support DDEV</a
+          >
         </li>
       </ul>
       <a href="/search" class="ml-4"
