Update DrupalEasy logo.

--- a/src/components/FeaturedSponsors.astro
+++ b/src/components/FeaturedSponsors.astro
@@ -40,9 +40,9 @@ const featuredSponsors = [
   },
   {
     name: "DrupalEasy",
-    logo: "/logos/drupal-easy.jpg",
+    logo: "/logos/drupaleasy.png",
     url: "https://www.drupaleasy.com/",
-    class: "h-12 w-12",
+    class: "h-10",
   },
   {
     name: "Redfin Solutions",
