--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -9,9 +9,9 @@ import Layout from "./../layouts/Layout.astro"
 import PostBody from "./../components/PostBody.astro"
 import Heading from "./../components/Heading.astro"
 import BlogPostFooter from "./../components/BlogPostFooter.astro"
+import FeatureImage from "./../components/FeatureImage.astro"
 
 const { frontmatter, url } = Astro.props
-const { slug } = Astro.params
 
 const authorImage = getAuthorImage(frontmatter.author)
 ---
@@ -26,6 +26,11 @@ const authorImage = getAuthorImage(frontmatter.author)
       authorAvatar={authorImage}
       readTime={frontmatter.minutesRead}
     />
+    {
+      frontmatter.featuredImage && (
+        <FeatureImage alt="" src={frontmatter.featuredImage} />
+      )
+    }
     <div class="flex">
       <div class="w-2/3">
         <PostBody>
@@ -54,5 +59,5 @@ const authorImage = getAuthorImage(frontmatter.author)
       </div>
     </div>
   </main>
-  <BlogPostFooter slug={slug} />
+  <BlogPostFooter activeUrl={url} />
 </Layout>
