Support caption+credit Markdown.

--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -27,7 +27,7 @@ const firstCategory = post.frontmatter.categories.length
   <div class="flex-shrink-0">
     <img
       class="h-48 w-full object-cover"
-      src={post.frontmatter.featuredImage}
+      src={post.frontmatter.featureImage.src}
       alt=""
     />
   </div>
