--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -33,6 +33,7 @@ const authorImage = getAuthorImage(frontmatter.author)
           alt={frontmatter.featureImage.alt}
           caption={frontmatter.featureImage.caption}
           credit={frontmatter.featureImage.credit}
+          shadow={frontmatter.featureImage.shadow}
         />
       )
     }
