--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -30,7 +30,7 @@ const firstCategory = post.frontmatter.categories.length
   <div class="flex-shrink-0">
     <img
       class="h-48 w-full object-cover"
-      src={hasFeatureImage ? post.frontmatter.featureImage.src : `/public/img/generic-thumbnail.png`}
+      src={hasFeatureImage ? post.frontmatter.featureImage.src : `/img/generic-thumbnail.png`}
       alt={hasFeatureImage ? post.frontmatter.featureImage.alt : ``}
     />
   </div>
