Upgrade to Astro v2!

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,8 +17,7 @@ const {
   noindex = false,
   nofollow = false,
 } = Astro.props
-const canonicalUrl = Astro.url.toString()
-
+const canonicalUrl = new URL(Astro.url.pathname, Astro.site)
 import "../styles/global.css"
 ---
 
