--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -6,6 +6,7 @@ export interface Props {
   post: object
 }
 
+import { Picture } from "@astrojs/image/components"
 import {
   getAuthorUrl,
   getAuthorImage,
@@ -21,6 +22,12 @@ const hasFeatureImage =
   Object.hasOwn(post.frontmatter, "featureImage") &&
   Object.hasOwn(post.frontmatter.featureImage, "src")
 
+const featureImageUrl = hasFeatureImage
+  ? post.frontmatter.featureImage.src
+  : `/img/generic-thumbnail.png`
+
+const featureImageAlt = hasFeatureImage ? post.frontmatter.featureImage.alt : ``
+
 const firstCategory = post.frontmatter.categories.length
   ? post.frontmatter.categories[0]
   : null
@@ -28,11 +35,19 @@ const firstCategory = post.frontmatter.categories.length
 
 <div class="flex flex-col rounded-lg overflow-hidden">
   <div class="flex-shrink-0">
-    <img
-      class="h-48 w-full object-cover"
-      src={hasFeatureImage ? post.frontmatter.featureImage.src : `/img/generic-thumbnail.png`}
-      alt={hasFeatureImage ? post.frontmatter.featureImage.alt : ``}
-    />
+    {
+      featureImageUrl.includes(".svg") ? (
+        <img src={featureImageUrl} alt={featureImageAlt} />
+      ) : (
+        <Picture
+          class="h-48 w-full object-cover"
+          src={featureImageUrl}
+          alt={featureImageAlt}
+          widths={[300, 600]}
+          aspectRatio="3:2"
+        />
+      )
+    }
   </div>
   <div class="flex-1 bg-gray-100 p-6 flex flex-col justify-between">
     <div class="flex-1">
