Drop `avif` format, cut down more large images.
Looks like `avif` variants were dramatically slowing build time.

--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -51,6 +51,7 @@ const firstCategory = post.frontmatter.categories.length
               class: `block h-48 w-full object-cover relative`,
             },
           }}
+          format={["webp"]}
           src={featureImageUrl}
           alt={featureImageAlt}
           width={600}
