--- a/src/components/FeatureImage.astro
+++ b/src/components/FeatureImage.astro
@@ -24,6 +24,7 @@ const { src, alt, caption = "", credit, shadow = false } = Astro.props
         }
       >
         <Picture
+          format={["webp"]}
           attributes={{
             picture: {
               class: `block rounded-lg`,
