--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -16,6 +16,10 @@ const { frontmatter, url } = Astro.props
 const hasFeatureImage =
   Object.hasOwn(frontmatter, "featureImage") &&
   Object.hasOwn(frontmatter.featureImage, "src")
+const shouldDisplayFeatureImage =
+  hasFeatureImage &&
+  (!Object.hasOwn(frontmatter.featureImage, "hide") ||
+    frontmatter.featureImage?.hide === false)
 const authorImage = getAuthorImage(frontmatter.author)
 ---
 
@@ -30,7 +34,7 @@ const authorImage = getAuthorImage(frontmatter.author)
       readTime={frontmatter.minutesRead}
     />
     {
-      hasFeatureImage && (
+      hasFeatureImage && shouldDisplayFeatureImage && (
         <FeatureImage
           src={frontmatter.featureImage.src}
           alt={frontmatter.featureImage.alt}
