--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,9 @@ import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
 ---
 
 <header class="w-full p-8">
-  <nav class="flex justify-between max-w-4xl mx-auto">
+  <nav
+    class="flex justify-between items-center content-center max-w-4xl mx-auto"
+  >
     <a href="/" class="relative -ml-2">
       <img class="h-8 w-auto sm:h-10" src="/logos/ddev.svg" alt="DDEV logo" />
     </a>
