Spiff up homepage title.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import FeaturedRepos from "../components/FeaturedRepos.astro"
 import Contributors from "../components/Contributors.astro"
 ---
 
-<Layout title={`DDEV`}>
+<Layout title={`Docker-based local development environments in minutes.`}>
   <main>
     <Hero />
 
