Update some namespaces.

--- a/src/components/FeaturedRepos.astro
+++ b/src/components/FeaturedRepos.astro
@@ -11,12 +11,12 @@ const repos = [
     description: "Official DDEV development and issues.",
   },
   {
-    name: "drud/ddev-contrib",
+    name: "ddev/ddev-contrib",
     description:
       "Vetted, user-contributed recipes for using and extending DDEV.",
   },
   {
-    name: "drud/awesome-ddev",
+    name: "ddev/awesome-ddev",
     description:
       "External resources, blog posts, recipes, screencasts, and more.",
   },
