--- a/src/pages/blog/authors.astro
+++ b/src/pages/blog/authors.astro
@@ -18,7 +18,7 @@ const activeAuthors = authors.filter((author) => {
 const title = `Blog Authors`
 ---
 
-<Layout title={title}>
+<Layout title={title} description={`Index of DDEV blog authors.`}>
   <main class="max-w-4xl mx-auto">
     <Heading title={title} />
     <div
