--- a/src/pages/blog/category/[slug].astro
+++ b/src/pages/blog/category/[slug].astro
@@ -36,7 +36,10 @@ const { name, posts } = Astro.props
 const title = `Posts in “${name}”`
 ---
 
-<Layout title={title}>
+<Layout
+  title={title}
+  description={`List of blog posts in the “${name}” category.`}
+>
   <main class="max-w-4xl mx-auto mb-24">
     <div class="flex space-x-12 py-24">
       <h1 class="font-bold text-4xl">Posts in “{name}”</h1>
