--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -118,7 +118,11 @@ const title = `Search`
   }
 </script>
 
-<Layout title={title} noindex={true}>
+<Layout
+  title={title}
+  noindex={true}
+  description={`Search pages and blog posts on ddev.com.`}
+>
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} />
     <div class="max-w-3xl">
