--- a/src/pages/blog/author/[slug].astro
+++ b/src/pages/blog/author/[slug].astro
@@ -34,7 +34,10 @@ const title = `Posts by ${author.data.name}`
 const { Content } = await author.render()
 ---
 
-<Layout title={title}>
+<Layout
+  title={title}
+  description={`List of blog posts by ${author.data.name}.`}
+>
   <main class="max-w-4xl mx-auto mb-24">
     <div class="flex space-x-12 py-24">
       <h1 class="font-bold text-4xl">{author.data.name}</h1>
